--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <body>
   <header>
 
-    <nav class="mx-56 my-12">
-      <div class="navbar bg-[#F85559] rounded-full  bg-base-100 bg-50 ">
-        <div class="flex-1 text-white text-xl">
+    <nav class="-mx-1 lg:mx-56 my-12 bg-[#F85559] sm:bg-[100%] rounded-full">
+      <div class="navbar">
+        <div class="flex-1 text-white  text-xl">
           
           <p class="mr-5 ml-10">Home</p>
           <p class="mr-5">About Us</p>
@@ -50,7 +50,7 @@
 
         <div class="flex-none gap-2">
           <div class="form-control relative">
-            <input type="text" placeholder="Search" class="input input-bordered rounded-full my-3 mx-4 w-96 md:w-96 " />
+            <input type="text" placeholder="Search" class="input input-bordered rounded-full my-3 mx-4 " />
             <button class="btn btn-ghost btn-circle absolute bottom-[12px] right-[17px]">
               <svg xmlns="http://www.w3.org/2000/svg" class=" h-7 w-7" fill="none" viewBox="0 0 24 24"
                 stroke="currentColor">
@@ -77,7 +77,7 @@
       <div>
 
 
-        <div class="carousel w-[85%] h-auto  mx-36">
+        <div class="carousel w-[175%] lg:w-[85%] h-auto  mx-36">
 
 
 
@@ -171,7 +171,7 @@
 
 
 
-        <div class="flex bg-white drop-shadow-md p-8 w-auto mx-96 justify-center justify-between -mt-14">
+        <div class="flex bg-white drop-shadow-md p-8 w-auto lg:mx-96  justify-center justify-between -mt-14">
           <div class="text-center">
             <img src="images/fruit1.png" alt="">
             <h3 class="mt-4">Jam</h3>
@@ -203,7 +203,7 @@
 
       <div class="flex justify-center mt-24 items-center ">
 
-        <div class="mr-96">
+        <div class="lg:mr-96 ">
 
           <h1 class="text-6xl font-extrabold">Deal of the day</h1>
           <p class="mt-10 mb-10">Contrary to popular belief, is not simply random text. It has roots in a <br> piece of
@@ -253,7 +253,7 @@
 
 
 
-          <div class="card-01 card w-96 bg-base-100 drop-shadow-lg mr-6">
+          <div class="card-01 card   w-96 bg-base-100 drop-shadow-lg mr-6">
             <figure class="px-10 pt-10">
               <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
             </figure>
@@ -522,7 +522,7 @@
 
     <section>
 
-      <div class="hero h-auto w-auto mx-32 background-img101">
+      <div class="hero h-auto w-auto lg:mx-32 mx-11 background-img101">
         <div class="hero-overlay bg-opacity-60"></div>
 
         <div class="hero-content text-center text-neutral-content">
@@ -598,7 +598,7 @@
 
       </div>
 
-      <div class="flex justify-center">
+      <div class=" flex justify-center">
 
         <div>
           <div class="flex mt-24">
